# fe

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README_8md.html  annotated.html  annotated_dup.js  arena_8h.html  arena_8h.js  arena_8h__dep__incl.map  arena_8h__dep__incl.md5  arena_8h__incl.map  arena_8h__incl.md5  arena_8h_source.html  assert_8h.html  assert_8h.js  assert_8h__dep__incl.map  assert_8h__dep__incl.md5  assert_8h__incl.map  assert_8h__incl.md5  assert_8h_source.html  cast_8h.html  cast_8h.js  cast_8h__incl.map  cast_8h__incl.md5  cast_8h_source.html  classes.html  classfe_1_1Arena-members.html  classfe_1_1Arena.html  classfe_1_1Arena.js  classfe_1_1Arena_1_1Allocator-members.html  classfe_1_1Arena_1_1Allocator.html  classfe_1_1Arena_1_1Allocator.js  classfe_1_1Arena_1_1MemoryResource-members.html  classfe_1_1Arena_1_1MemoryResource.html  classfe_1_1Arena_1_1MemoryResource.js  classfe_1_1Arena_1_1MemoryResource__inherit__graph.map  classfe_1_1Arena_1_1MemoryResource__inherit__graph.md5  (+304 more)
.github/: copilot-instructions.md
.github/workflows/: doxygen.yml  linux.yml  macos.yml  windows.yml
assets/: logo.tex  make-logo.sh
cmake/: fe-config.cmake.in
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  header.html
examples/: CMakeLists.txt  calc.cpp
include/: CMakeLists.txt
include/fe/: arena.h  assert.h  cast.h  config.h.in  driver.h  enum.h  format.h  lexer.h  loc.cpp.h  loc.h  parser.h  ring.h  sym.h  term.h  utf8.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  (+92 more)
src/: CMakeLists.txt
src/fe/: CMakeLists.txt
tests/: CMakeLists.txt  lexer.cpp  test.cpp
